# LawFirmSample

./: README.md  app.py  data_analyzer.py  data_processor.py  database.py  pyproject.toml  query_engine.py  sample_data.py  utils.py  visualization.py
attached_assets/: ConsumerReport_Q4_2021.xlsx  JAMS-Consumer-Case-Information (Demands 3.5.20-9.27.21).xlsx  Pasted-Database-Status-Error-Column-expression-FROM-clause-or-other-columns-clause-element-expected-g-1743793251535.txt  Pasted-Product-Requirements-Document-Arbitration-Data-Visualization-Query-Tool-Version-1-0-Date-20-1743787662652.txt  Pasted-TypeError-Invalid-comparison-between-dtype-datetime64-ns-and-date-Traceback-File-home-runner--1743788762191.txt  jams-consumer-case-information (Demands 10.19.16-8.6.2020).xlsx
