[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.70.0",
    "streamlit-aggrid>=1.1.2",
    "streamlit>=1.44.1",
    "pandas>=2.2.3",
    "numpy>=2.2.4",
    "openpyxl>=3.1.5",
    "plotly>=6.0.1",
    "sqlalchemy>=2.0.40",
    "psycopg2-binary>=2.9.10",
]
